# 5c

./: CMakeLists.txt  main.c
estimationOfComplexityOfAlgorithms/: estimationOfComplexityOfAlgorithms.c  estimationOfComplexityOfAlgorithms.h
sorts/: sorts.c  sorts.h
